Fix card alignment

--- a/src/pages/Profile/profile.scss
+++ b/src/pages/Profile/profile.scss
@@ -106,6 +106,14 @@ body {
   margin-right: 5% !important;
 }
 
+.cardContainer .MuiPaper-root {
+  padding: 2%;
+}
+
+.cardContainer .buttonsContainer {
+  margin: 0 auto;
+}
+
 .mobileCardContainer {
   display: block;
   margin-bottom: 5%;
